syntax = "proto3";

import "google/protobuf/wrappers.proto";

package avalanche.drm.auth;

message AcquireChallengeRpc {

  message Command {

    string challenge_id = 1;
  }

  message Response {
    
    bool success = 1;

    google.protobuf.StringValue message = 2;

    google.protobuf.StringValue ticket_id = 3;
  }
}

message AcceptChallengeRpc {

  message Command {

    string store_id = 1;
  }

  message Response {
    
    string challenge_id = 1;
  }
}

message WatchChallengeRpc {

  message Command {

    string challenge_id = 1;
  }

  message Response {

    bool success = 1;
    
    google.protobuf.StringValue message = 2;
    
    google.protobuf.StringValue ticket_id = 3;
  }
}

service AuthService {

  rpc Acquire(AcquireChallengeRpc.Command) returns (stream AcquireChallengeRpc.Response);

  rpc Accept(AcceptChallengeRpc.Command) returns (AcceptChallengeRpc.Response);

  rpc Watch(WatchChallengeRpc.Command) returns (stream WatchChallengeRpc.Response);
}